--- a/src/components/meals/Section.css
+++ b/src/components/meals/Section.css
@@ -2,12 +2,11 @@
     /* background-color:rgb(199, 225, 226); */
     /* background-color: #A8763E; */
     /* background-color: #dfe6df; */
-    background-color: #fee2b3;;
     height:100%;
 }
 
 .section img:hover{
     cursor: pointer;
     transform: scale(0.9);
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s;
 }
