--- a/src/components/meals/Desert.css
+++ b/src/components/meals/Desert.css
@@ -8,6 +8,10 @@
     background-color: #dca2357c;
 }
 
-.desert-img{
-    /* height: 60%; */
-}
+/* .desert-img{
+    height: 60%;
+} */
+
+/* .desert{
+    
+} */
