--- a/src/components/meals/Meals.css
+++ b/src/components/meals/Meals.css
@@ -1,3 +1,9 @@
-.meals{
-    /* background-color: #fee2b3 !important; */
+/* .meals{
+    background-color: #fee2b3 !important;
+} */
+.des{
+    background-color: rgba(35, 68, 177, 0.178);
+    /* margin: 0;
+    padding: 0;
+    width: 100vw; */
 }
