--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: inline-block;
     margin-top: 20px;
 } */
-
+/* 
 .meals{
-    /* background-color:rgb(199, 225, 226); */
-}
+    background-color:rgb(199, 225, 226);
+} */
