--- a/src/components/meals/Meals.css
+++ b/src/components/meals/Meals.css
@@ -1,7 +1,7 @@
 
-/* .meals{
+.meals{
     background-color: #fee2b3 !important;
-} */
+}
 .des{
     background-color: rgba(35, 68, 177, 0.178);
     /* margin: 0;
