--- a/src/components/meals/SideNav.css
+++ b/src/components/meals/SideNav.css
@@ -14,6 +14,7 @@
 .side a:hover{
     background-color: #198754 !important;
     color: #dc3545 !important;
+    border-radius: 10px;
 }
 .side h1{
     color:rgb(65, 34, 34);
