--- a/src/components/meals/Meals.css
+++ b/src/components/meals/Meals.css
@@ -2,6 +2,9 @@
 .meals{
     background-color: #fee2b3 !important;
 }
+/* .meals{
+    background-color: #b1ada5 !important;
+} */
 .des{
     background-color: rgba(35, 68, 177, 0.178);
     /* margin: 0;
