--- a/src/components/meals/Desert.css
+++ b/src/components/meals/Desert.css
@@ -1,5 +1,5 @@
 .img-border{
-    border: 3px solid #dc3545;
+    border: 1px solid;
     /* background-color: red; */
     /* height: 200px;
     width: 20%; */
@@ -15,3 +15,42 @@
 /* .desert{
     
 } */
+
+.product-container{
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.col-4{
+    flex-basis: 25%;
+    min-width: 300px;
+    max-height: 400px;
+    margin-bottom: 50px;
+    font-size: 15px;
+    transition: transform 0.5s;
+}
+.col-4 img{
+
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+   
+}
+.col-4 img:hover{
+    border-image: linear-gradient(red, blue) 27;
+}
+h4{
+    color: #555;
+    font-weight: normal;
+}
+
+
+.col-4:hover{
+    transform: translateY(-5px);
+}
+.rating .fa{
+    color: #ff523b;
+}
+
